fixed carousel for responsive changes, started form with floating label, started using sass partials, added snippet for mobile menu to collapse after click

--- a/scss/fixed-queries.scss
+++ b/scss/fixed-queries.scss
@@ -1,3 +1,5 @@
+@use 'custom-fix' as *;
+
 // MAX WIDTH
 @media (max-width: 400px) {
     .navbar-brand {
@@ -45,8 +47,8 @@
 
     .cta-info,
     .form {
-    padding: 0; 
-}
+        padding: 0; 
+    }
 
 }
 @media (max-width: 1199.98px) {
@@ -78,9 +80,53 @@
         background-position: center left;
         background-size: contain;
     }
+    .toggle-spans {
+        height: 3.5rem;
+    }
+    .toggle-spans .text-md-end span { 
+        position: absolute;
+        right: 25px;
+        width: inherit;
+        left: auto;
+    }
+    .toggle-spans .text-md-end::after{
+        content: "&";
+        display: block;
+        position: absolute;
+        right: -8px;
+        margin-right: auto;
+        margin-top: auto;
+        font-size: 70%;
+        font-weight: lighter;
+        line-height: 52px;
+        color: $fu_blue;
+    }
+
+    .toggle-spans .text-md-start span { 
+        position: absolute;
+        left: 25px;
+        width: inherit;
+    }
 
 }
 @media (min-width: 992px) {
+    .carousel-control-prev-icon,
+    .carousel-control-next-icon {
+        background-image: none;
+    }
+    .carousel-control-prev-icon i,
+    .carousel-control-next-icon i {
+        display: inline;
+    }
+    .carousel-control-prev-icon, .carousel-control-next-icon {
+        width: auto;
+        height: auto;
+    }
+    .carousel-control-prev-icon i,
+    .carousel-control-next-icon i{
+    font-size: 10rem;
+    text-shadow: 1px 1px 1px $fu_blue;
+    }
 
 }
 @media (min-width: 1200px) {
